--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/weng
+spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.initialization-mode=always
 spring.datasource.continue-on-error=true
+spring.thymeleaf.cache=false
