--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.jpa.hibernate.show-sql=true
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+
 spring.datasource.initialization-mode=always
 spring.datasource.continue-on-error=true
 spring.thymeleaf.cache=false
+server.error.whitelabel.enabled=false
